- Various performance improvements.
- The `colors.tabs.bar.bg` setting is now of type `QssColor` and thus supports
  gradients.
- The `:fullscreen` command now understands a new `--enter` flag which
  causes it to always enter fullscreen instead of toggling the current
  state.
- `--debug-flag stack` is now needed to show stack traces on renderer process
  crashes.

Deprecated
~~~~~~~~~~

- `:yank markdown` got deprecated, as `:yank inline [{title}]({url})` can now
  be used instead.

Fixed
~~~~~

- Various QtWebEngine load signals are now handled differently, which should
  fix issues with insert mode being left while typing on sites like Google
  Translate.
- Race condition causing a colored statusbar in normal mode when
  entering/exiting caret mode quickly.
- Using `100%` for a hue in a `hsv(...)` config value now corresponds to 359
  (rather than 255), matching the fixed behavior in Qt 5.13.
- Chaining commands with ;; used to abort with some failing commands. It now
  runs the second command no matter whether the first one succeeded or not.
- Handling of profiles and private windows (and resulting crashes with Qt
  5.12.2).
- Fixes for corner-cases when using :navigate increment/decrement.

v1.6.3
------

Fixed
~~~~~

- Crash when hinting and changing/closing the tab before hints are displayed.
- Crash on redirects with Qt 5.13.
- Hide bogus `AA_ShareOpenGLContexts` warning with Qt 5.12.4.
- Workaround for renderer process crashes with Qt 5.12.4.
  If you're unable to update, you can remove `~/.cache/qutebrowser` for the
  same result.

v1.6.2
------

Changed
~~~~~~~

- Windows/macOS releases now ship with Qt 5.12.3, which includes security fixes
  up to Chromium 73.0.3683.75.

Fixed
~~~~~

- Crash when SQL errors occur while using the completion.
- Crash when cancelling a download prompt started in an already closed window.
- Crash when many prompts are opened at the same time.
- Running without Qt installed now displays a proper error again.