@@ -68,6 +68,8 @@ Changed
   state.
 - `--debug-flag stack` is now needed to show stack traces on renderer process
   crashes.
+- For runtime data (such as the IPC socket), a proper runtime path is now used
+  on BSD; only macOS/Windows continue to use the temporary directory.
 
 Deprecated
 ~~~~~~~~~~
